pipeline/airflow/logs/scheduler/2025-06-27/analyze_kpi.py.log
[2025-06-27T01:45:10.523+0000] {processor.py:157} INFO - Started process (PID=36) to work on /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:45:10.524+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/analyze_kpi.py for tasks to queue
[2025-06-27T01:45:10.526+0000] {logging_mixin.py:154} INFO - [2025-06-27T01:45:10.526+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:45:10.534+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:45:10.544+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/analyze_kpi.py took 0.023 seconds
[2025-06-27T01:45:40.789+0000] {processor.py:157} INFO - Started process (PID=38) to work on /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:45:40.790+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/analyze_kpi.py for tasks to queue
[2025-06-27T01:45:40.792+0000] {logging_mixin.py:154} INFO - [2025-06-27T01:45:40.792+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:45:40.796+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:45:40.808+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/analyze_kpi.py took 0.022 seconds
[2025-06-27T01:46:11.142+0000] {processor.py:157} INFO - Started process (PID=40) to work on /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:46:11.144+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/analyze_kpi.py for tasks to queue
[2025-06-27T01:46:11.147+0000] {logging_mixin.py:154} INFO - [2025-06-27T01:46:11.146+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:46:11.149+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:46:11.161+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/analyze_kpi.py took 0.025 seconds
[2025-06-27T01:46:41.544+0000] {processor.py:157} INFO - Started process (PID=42) to work on /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:46:41.544+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/analyze_kpi.py for tasks to queue
[2025-06-27T01:46:41.545+0000] {logging_mixin.py:154} INFO - [2025-06-27T01:46:41.545+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:46:41.551+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:46:41.562+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/analyze_kpi.py took 0.020 seconds
[2025-06-27T01:46:57.642+0000] {processor.py:157} INFO - Started process (PID=36) to work on /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:46:57.642+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/analyze_kpi.py for tasks to queue
[2025-06-27T01:46:57.644+0000] {logging_mixin.py:154} INFO - [2025-06-27T01:46:57.643+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:46:57.646+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:46:57.657+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/analyze_kpi.py took 0.017 seconds
[2025-06-27T01:47:28.045+0000] {processor.py:157} INFO - Started process (PID=38) to work on /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:47:28.045+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/analyze_kpi.py for tasks to queue
[2025-06-27T01:47:28.047+0000] {logging_mixin.py:154} INFO - [2025-06-27T01:47:28.047+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:47:28.054+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:47:28.065+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/analyze_kpi.py took 0.025 seconds
[2025-06-27T01:47:58.417+0000] {processor.py:157} INFO - Started process (PID=40) to work on /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:47:58.418+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/analyze_kpi.py for tasks to queue
[2025-06-27T01:47:58.421+0000] {logging_mixin.py:154} INFO - [2025-06-27T01:47:58.420+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:47:58.424+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:47:58.435+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/analyze_kpi.py took 0.022 seconds
[2025-06-27T01:48:22.721+0000] {processor.py:157} INFO - Started process (PID=41) to work on /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:48:22.722+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/analyze_kpi.py for tasks to queue
[2025-06-27T01:48:22.725+0000] {logging_mixin.py:154} INFO - [2025-06-27T01:48:22.724+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:48:22.730+0000] {logging_mixin.py:154} INFO - [2025-06-27T01:48:22.728+0000] {dagbag.py:346} ERROR - Failed to import: /opt/airflow/dags/analyze_kpi.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 342, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/analyze_kpi.py", line 6
    TODO Day 3: Airflow 모듈 임포트
         ^
SyntaxError: invalid syntax
[2025-06-27T01:48:22.730+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:48:22.756+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/analyze_kpi.py took 0.039 seconds
[2025-06-27T01:48:34.890+0000] {processor.py:157} INFO - Started process (PID=43) to work on /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:48:34.892+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/analyze_kpi.py for tasks to queue
[2025-06-27T01:48:34.895+0000] {logging_mixin.py:154} INFO - [2025-06-27T01:48:34.894+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:48:34.905+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:48:34.922+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/analyze_kpi.py took 0.037 seconds
[2025-06-27T01:49:05.201+0000] {processor.py:157} INFO - Started process (PID=45) to work on /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:49:05.202+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/analyze_kpi.py for tasks to queue
[2025-06-27T01:49:05.204+0000] {logging_mixin.py:154} INFO - [2025-06-27T01:49:05.204+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:49:05.206+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:49:05.217+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/analyze_kpi.py took 0.018 seconds
[2025-06-27T01:49:35.517+0000] {processor.py:157} INFO - Started process (PID=47) to work on /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:49:35.519+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/analyze_kpi.py for tasks to queue
[2025-06-27T01:49:35.521+0000] {logging_mixin.py:154} INFO - [2025-06-27T01:49:35.521+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:49:35.525+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/analyze_kpi.py
[2025-06-27T01:49:35.541+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/analyze_kpi.py took 0.027 seconds
